--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>passenger-algorithms</module>
+        <module>passenger-java</module>
+        <module>passenger-spring</module>
+        <module>passenger-data</module>
+        <module>passenger-test</module>
     </modules>
     <name>passenger-parents</name>
     <description>project for Java</description>
