--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,23 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>2.3.5.RELEASE</version>
+                <scope>test</scope>
+                <exclusions>
+                    <!--这个是JUnit5中为了支持使用JUint4所做的一个过度
+                     也就是说，你只需要在你的JUnit4旧项目中添加这个依赖，
+                     就能完美过渡，而不用修改之前代码
+                     这里用不到，自然也就排除了。当然，这里，它无关紧要
+                          -->
+                    <exclusion>
+                        <groupId>org.junit.vintage</groupId>
+                        <artifactId>junit-vintage-engine</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
         </dependencies>
     <!--编译管理 jdk版本和字符集编码-->
     <build>
@@ -52,16 +69,7 @@
         </plugins>
     </build>
     <!--Maven远程仓库设置 非必要，可以删除-->
-    <repositories>
-        <repository>
-            <id>public</id>
-            <name>aliyun nexus</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-        </repository>
-    </repositories>
+
 
 
 </project>
