--- a/passenger-data-structure/pom.xml
+++ b/passenger-data-structure/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>passenger-data</artifactId>
+    <artifactId>passenger-data-structure</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
