--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>passenger-algorithms</module>
         <module>passenger-java</module>
         <module>passenger-spring</module>
-        <module>passenger-data</module>
+        <module>passenger-data-structure</module>
         <module>passenger-test</module>
     </modules>
     <name>passenger-parents</name>
