--- a/passenger-algorithms/pom.xml
+++ b/passenger-algorithms/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>passenger-algorithms</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.mason</groupId>
+            <artifactId>passenger-data-structure</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
